--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,12 +3,12 @@
         <div class="row py-md-5 text-center justify-content-center">
             <div class="col-md-12 col-lg-6 mb-6 mb-md-0">
                 <h1 class="display-2 fw-bold mb-4 position-relative">
-                    Write your thoughts as they come to you.
+                    Uh-oh! 😬
                 </h1>
                 <p class="fs-4 mb-4">
-                    Very Simple Notes taking app made using nodejs, EJS, expressjs and bootstrap css😊.
+                    Error 404 Page Not Found
                 </p>
-                <a href="/auth/google" class="btn btn-primary btn-lg">Try Notes, It's Free!</a>
+                <a href="/" class="btn btn-primary btn-lg">Explore Notes</a>
             </div>
         </div>
     </main>
