--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&family=Unbounded:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body> 
-    <%- include('../partials/header.ejs')%>
+    <%- include('../partials/header_dashboard.ejs')%>
     <%-body%>
     <%- include('../partials/footer.ejs')%>
 
